<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#222222"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/homeSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/home"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <Button
            android:id="@+id/schemeSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/scheme"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />
        
        <Button
            android:id="@+id/foodSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/food"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <Button
            android:id="@+id/newsSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/newr"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <Button
            android:id="@+id/karSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/elevkar"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <Button
            android:id="@+id/dexSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/dexter"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

        <Button
            android:id="@+id/itsSlide"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/itslearning"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />
    </LinearLayout>

</ScrollView>