<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/butcontainer"
    android:background="#005566" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true" >

        <EditText
            android:id="@+id/numbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#FFFFFF" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/prompttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/numbox"
            android:layout_alignLeft="@+id/numbox"
            android:text="@string/angeDittPers"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/numbox"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/biglogo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/alleit" />

        <CheckBox
            android:id="@+id/saveCreds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/numbox"
            android:layout_below="@+id/numbox"
            android:text="@string/savecred"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/saveSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/saveCreds"
            android:layout_below="@+id/saveCreds"
            android:text="@string/saveSport"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/butcontainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/teacher"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/cont"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>