<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:orientation="vertical" >
    
    <!--  makes the RelativeLayout parent fill the screen -->
    <View 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#222222" >

        <ImageView
            android:id="@+id/pic"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:src="@null" />

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/pic"
            android:text="@string/noHead"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head"
            android:layout_alignLeft="@+id/head"
            android:text="@string/noExtra"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/info"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@null"
            android:textColor="#FFFFFF"
            android:textColorHint="#DDDDDD" />

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/top"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/separator"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp" >

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noDesc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />
    
    </ScrollView>

</RelativeLayout>
