<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#222" >

    <!-- Makes the relative layout parent use the entire screen -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:id="@+id/ebg"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:animateLayoutChanges="true"
                android:background="@drawable/theboardbg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/elogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-37.5dp"
                    android:contentDescription="@string/app_name"
                    android:duplicateParentState="true"
                    android:src="@drawable/elevkaren" />

                <TextView
                    android:id="@+id/board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:paddingLeft="30dp"
                    android:text="@string/theboard"
                    android:textColor="#FFFFFF"
                    android:textSize="45sp" />
            </LinearLayout>
            
            <RelativeLayout
                android:id="@+id/delimiter"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="#777"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/prompttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/utskott"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF" />
                
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/prbg"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/prbg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/prlogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-37.5dp"
                    android:contentDescription="@string/app_name"
                    android:duplicateParentState="true"
                    android:src="@drawable/pr" />

                <TextView
                    android:id="@+id/pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:paddingLeft="30dp"
                    android:text="@string/PR"
                    android:textColor="#FFFFFF"
                    android:textSize="45sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/festarebg"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/festarebg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/festarelogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-37.5dp"
                    android:contentDescription="@string/app_name"
                    android:duplicateParentState="true"
                    android:src="@drawable/festare" />

                <TextView
                    android:id="@+id/festare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:paddingLeft="30dp"
                    android:text="@string/festare"
                    android:textColor="#FFFFFF"
                    android:textSize="45sp" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/ifbg"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/skolifbg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iflogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-37.5dp"
                    android:contentDescription="@string/app_name"
                    android:duplicateParentState="true"
                    android:src="@drawable/skolif" />

                <TextView
                    android:id="@+id/If"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:paddingLeft="30dp"
                    android:text="@string/skolif"
                    android:textColor="#FFFFFF"
                    android:textSize="45sp" />
            </LinearLayout>
            
            <RelativeLayout
                android:id="@+id/delimiter2"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="#777"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/foreningar"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF" />
                
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/itbg"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/alleitbg"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/itlogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="-37.5dp"
                    android:contentDescription="@string/app_name"
                    android:duplicateParentState="true"
                    android:src="@drawable/alleit" />

                <TextView
                    android:id="@+id/IT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:duplicateParentState="true"
                    android:paddingLeft="30dp"
                    android:text="@string/IT"
                    android:textColor="#FFFFFF"
                    android:textSize="45sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>